Add prompt logic in mobile feed refresh (#5462)

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -188,6 +188,7 @@
         <item quantity="other">%d subscriptions updated.</item>
     </plurals>
     <string name="add_to_folder">Add to folder</string>
+    <string name="confirm_mobile_feed_refresh_dialog_message">Downloading episodes over mobile data connection is disabled in the settings.\n\nDo you still want to refresh all podcasts over mobile data?</string>
 
     <!-- actions on feeditems -->
     <string name="download_label">Download</string>
